--- a/src/app/home/home.page.html
+++ b/src/app/home/home.page.html
@@ -7,6 +7,8 @@
 </ion-header>
 
 <ion-content [fullscreen]="true">
+
+  <amplify-sign-out></amplify-sign-out>
   <ion-header collapse="condense">
     <ion-toolbar>
       <ion-title size="large">Blank</ion-title>
@@ -15,6 +17,7 @@
 
   <div id="container">
     <strong>Ready to create an app?</strong>
-    <p>Start with Ionic <a target="_blank" rel="noopener noreferrer" href="https://ionicframework.com/docs/components">UI Components</a></p>
+    <p>Start with Ionic <a target="_blank" rel="noopener noreferrer"
+        href="https://ionicframework.com/docs/components">UI Components</a></p>
   </div>
 </ion-content>
