--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,21 +1,6 @@
 <ion-app>
   <amplify-authenticator>
     <ion-router-outlet></ion-router-outlet>
-    <ion-tabs>
-      <ion-tab-bar slot="bottom">
-        <ion-tab-button tab="home">
-          <ion-icon name="home"></ion-icon>
-          <ion-label>Home</ion-label>
-        </ion-tab-button>
-        <ion-tab-button tab="search">
-          <ion-icon name="search"></ion-icon>
-          <ion-label>Search</ion-label>
-        </ion-tab-button>
-        <ion-tab-button tab="notification">
-          <ion-icon name="notifications"></ion-icon>
-          <ion-label>Search</ion-label>
-        </ion-tab-button>
-      </ion-tab-bar>
-    </ion-tabs>
+    <app-footer></app-footer>
   </amplify-authenticator>
 </ion-app>
