--- a/src/app/oshaberi-detail/oshaberi-detail.page.html
+++ b/src/app/oshaberi-detail/oshaberi-detail.page.html
@@ -1,9 +1,17 @@
-<ion-header>
-  <ion-toolbar>
-    <ion-title>oshaberi-detail</ion-title>
-  </ion-toolbar>
-</ion-header>
+<app-header iconType="back" title="おしゃべり"></app-header>
 
 <ion-content>
   <app-oshaberi-button></app-oshaberi-button>
+  <ng-container *ngIf="oshaberi">
+    <div class="oshaberiContentWrapper">
+      <app-oshaberi-header [oshaberi]="oshaberi"></app-oshaberi-header>
+      <app-oshaberi-body [oshaberi]="oshaberi"></app-oshaberi-body>
+    </div>
+    <app-reaction-panel></app-reaction-panel>
+    <app-action-panel></app-action-panel>
+    <div *ngIf="oshaberi.replyOshaberi.items.length>0" class="replyHeader">返信</div>
+    <ng-container *ngFor="let oshaberi of oshaberi.replyOshaberi.items">
+      <app-oshaberi [oshaberi]="oshaberi"></app-oshaberi>
+    </ng-container>
+  </ng-container>
 </ion-content>
