--- a/src/app/shared/oshaberi/oshaberi.component.html
+++ b/src/app/shared/oshaberi/oshaberi.component.html
@@ -2,8 +2,8 @@
     <ion-card-header>
         <app-oshaberi-header [oshaberi]="oshaberi"></app-oshaberi-header>
     </ion-card-header>
-    <ion-card-content>
+    <ion-card-content class="cardContent">
         <app-oshaberi-body [oshaberi]="oshaberi"></app-oshaberi-body>
-        <app-action-panel></app-action-panel>
+        <app-action-panel [oshaberi]="oshaberi"></app-action-panel>
     </ion-card-content>
 </ion-card>
