--- a/src/app/oshaberi-detail/oshaberi-detail.page.html
+++ b/src/app/oshaberi-detail/oshaberi-detail.page.html
@@ -7,8 +7,8 @@
       <app-oshaberi-header [oshaberi]="oshaberi"></app-oshaberi-header>
       <app-oshaberi-body [oshaberi]="oshaberi"></app-oshaberi-body>
     </div>
-    <app-reaction-panel></app-reaction-panel>
-    <app-action-panel></app-action-panel>
+    <app-reaction-panel [oshaberi]="oshaberi"></app-reaction-panel>
+    <app-action-panel [oshaberi]="oshaberi" [showNumbers]="false"></app-action-panel>
     <div *ngIf="oshaberi.replyOshaberi.items.length>0" class="replyHeader">返信</div>
     <ng-container *ngFor="let oshaberi of oshaberi.replyOshaberi.items">
       <app-oshaberi [oshaberi]="oshaberi"></app-oshaberi>
