--- a/src/app/oshaberi-detail/reaction-panel/reaction-panel.component.html
+++ b/src/app/oshaberi-detail/reaction-panel/reaction-panel.component.html
@@ -1,3 +1,12 @@
-<p>
-  reaction-panel works!
-</p>
+<ion-grid class="panelWrapper">
+  <ion-row>
+    <ion-col class="panel likePanel" [routerLink]="['/like-user-list',oshaberi.id]">
+      {{oshaberi.like.items.length}}
+      いいね
+    </ion-col>
+    <ion-col class="panel">
+      {{oshaberi.replyOshaberi.items.length}}
+      返信
+    </ion-col>
+  </ion-row>
+</ion-grid>
