--- a/src/app/oshaberi-detail/reaction-panel/reaction-panel.component.html
+++ b/src/app/oshaberi-detail/reaction-panel/reaction-panel.component.html
@@ -1,7 +1,7 @@
 <ion-grid class="panelWrapper">
   <ion-row>
     <ion-col class="panel likePanel" [routerLink]="['/like-user-list',oshaberi.id]">
-      {{oshaberi.like.items.length}}
+      {{likeAmount}}
       いいね
     </ion-col>
     <ion-col class="panel">
