create following user list page

--- a/src/app/following-userlist/following-userlist.page.html
+++ b/src/app/following-userlist/following-userlist.page.html
@@ -1,9 +1,24 @@
-<ion-header>
-  <ion-toolbar>
-    <ion-title>following-userlist</ion-title>
-  </ion-toolbar>
-</ion-header>
+<app-header iconType="back" title="フォロー一覧"></app-header>
 
 <ion-content>
   <app-oshaberi-button></app-oshaberi-button>
+  <ion-segment [value]="segmentValue" (ionChange)="segmentChanged($event)">
+    <ion-segment-button value="followees">
+      <ion-label>フォロー中</ion-label>
+    </ion-segment-button>
+    <ion-segment-button value="followers">
+      <ion-label>フォロワー</ion-label>
+    </ion-segment-button>
+  </ion-segment>
+  <ng-container *ngIf="segmentValue=='followees';else followersTemplate">
+    <ng-container *ngIf="followees.length">
+      <app-user-digest *ngFor="let userInfo of followees" [userInfo]="userInfo"></app-user-digest>
+    </ng-container>
+  </ng-container>
 </ion-content>
+
+<ng-template #followersTemplate>
+  <ng-container *ngIf="followers.length">
+    <app-user-digest *ngFor="let userInfo of followers" [userInfo]="userInfo"></app-user-digest>
+  </ng-container>
+</ng-template>
