--- a/src/app/shared/user-digest/user-digest.component.html
+++ b/src/app/shared/user-digest/user-digest.component.html
@@ -1,3 +1,5 @@
 <p>
-  user-digest works!
+  {{userInfo.userId}}
+  {{userInfo.profile ? userInfo.profile:''}}
+  {{userInfo.iconImageKey ? userInfo.iconImageKey:''}}
 </p>
