--- a/src/app/home/home.page.html
+++ b/src/app/home/home.page.html
@@ -1,4 +1,4 @@
-<app-header title="ホーム"></app-header>
+<app-header iconType="menu" title="ホーム"></app-header>
 
 <ion-content [fullscreen]="true">
   <app-oshaberi-button></app-oshaberi-button>
