--- a/src/app/notification/notification.page.html
+++ b/src/app/notification/notification.page.html
@@ -1,9 +1,6 @@
-<ion-header>
-  <ion-toolbar>
-    <ion-title>notification</ion-title>
-  </ion-toolbar>
-</ion-header>
+<app-header title="通知"></app-header>
 
 <ion-content>
   <app-oshaberi-button></app-oshaberi-button>
+  通知機能は開発中です
 </ion-content>
