--- a/src/app/search/search.page.html
+++ b/src/app/search/search.page.html
@@ -1,9 +1,6 @@
-<ion-header>
-  <ion-toolbar>
-    <ion-title>search</ion-title>
-  </ion-toolbar>
-</ion-header>
+<app-header></app-header>
 
 <ion-content>
   <app-oshaberi-button></app-oshaberi-button>
+  検索機能は開発中です
 </ion-content>
