--- a/src/app/menu/menu.component.html
+++ b/src/app/menu/menu.component.html
@@ -6,9 +6,8 @@
   </ion-header>
   <ion-content>
     <ion-list>
-      <ion-item>
-        <amplify-sign-out></amplify-sign-out>
-      </ion-item>
+      <ion-item [routerLink]="['/profile',username]" (click)="closeMenu()">プロフィール</ion-item>
+      <ion-item (click)="signOut()">サインアウト</ion-item>
     </ion-list>
   </ion-content>
 </ion-menu>
