--- a/src/app/search/search.page.html
+++ b/src/app/search/search.page.html
@@ -1,4 +1,4 @@
-<app-header></app-header>
+<app-header iconType="menu" title="検索"></app-header>
 
 <ion-content>
   <app-oshaberi-button></app-oshaberi-button>
