--- a/src/app/shared/components/header/header.component.html
+++ b/src/app/shared/components/header/header.component.html
@@ -1,21 +1,23 @@
 <ion-header [translucent]="true">
   <ion-toolbar>
-    <ion-button *ngIf="iconType=='back'" fill="clear" (click)="goBack()">
-      <ion-icon name="arrow-back-outline"></ion-icon>
-    </ion-button>
-    <ion-button *ngIf="iconType=='menu'" fill="clear" (click)="openMenu()">
-      <ion-avatar class="headerAvatar">
-        <amplify-s3-image *ngIf="userInfo && userInfo.iconImageKey;else iconImageUnset" class="headerAvatarS3"
-          [attr.img-key]="userInfo.iconImageKey" level="public">
-        </amplify-s3-image>
-      </ion-avatar>
-    </ion-button>
+    <ion-buttons slot="start">
+      <ion-menu-button *ngIf="iconType=='menu';else backButton"></ion-menu-button>
+    </ion-buttons>
     <ion-title *ngIf="title">{{ title }}</ion-title>
-    <ion-button *ngIf="buttonText" [disabled]="buttonDisabled" slot="end" (click)="sendButtonClickEvent()">{{ buttonText
-      }}</ion-button>
+    <ion-buttons slot="end">
+      <ion-button *ngIf="buttonText" [disabled]="buttonDisabled" slot="end" (click)="sendButtonClickEvent()">{{
+        buttonText
+        }}</ion-button>
+    </ion-buttons>
   </ion-toolbar>
 </ion-header>
 
 <ng-template #iconImageUnset>
   <img src="assets/iconImageUnset.jpg">
+</ng-template>
+
+<ng-template #backButton>
+  <ion-button fill="clear" (click)="goBack()">
+    <ion-icon name="arrow-back-outline"></ion-icon>
+  </ion-button>
 </ng-template>
