--- a/src/app/shared/components/oshaberi-body/oshaberi-body.component.html
+++ b/src/app/shared/components/oshaberi-body/oshaberi-body.component.html
@@ -1,4 +1,4 @@
-<p class="cardContentText" (click)="goToOshaberiDetailPage()">{{ oshaberi.content }}</p>
+<p (click)="goToOshaberiDetailPage()">{{ oshaberi.content }}</p>
 <ion-slides pager>
   <ion-slide *ngFor="let imageKey of oshaberi.imageKeys">
     <amplify-s3-image class="cardContentImage" [attr.img-key]="imageKey" level="public"></amplify-s3-image>
