--- a/src/app/shared/components/oshaberi-header/oshaberi-header.component.html
+++ b/src/app/shared/components/oshaberi-header/oshaberi-header.component.html
@@ -7,8 +7,8 @@
     </ion-avatar>
   </div>
   <div class="cardHeaderUsername" (click)="goToProfilePage()">
-    <ion-card-title class="cardHeaderUsernameNickname">{{oshaberi.author | username}}</ion-card-title>
-    <ion-card-subtitle>{{oshaberi.author | username}}</ion-card-subtitle>
+    <ion-card-title class="cardHeaderUsernameNickname">{{displayName | username}}</ion-card-title>
+    <ion-card-subtitle>@{{oshaberi.author | username}}</ion-card-subtitle>
   </div>
   <div class="cardHeaderTime">{{oshaberi.timestamp | elapsedTime}}</div>
 </div>
