--- a/src/app/footer/footer.component.html
+++ b/src/app/footer/footer.component.html
@@ -2,15 +2,16 @@
   <ion-tab-bar slot="bottom">
     <ion-tab-button tab="home">
       <ion-icon name="home"></ion-icon>
-      <ion-label>Home</ion-label>
+      <ion-label>ホーム</ion-label>
     </ion-tab-button>
     <ion-tab-button tab="search">
       <ion-icon name="search"></ion-icon>
-      <ion-label>Search</ion-label>
+      <ion-label>検索</ion-label>
     </ion-tab-button>
     <ion-tab-button tab="notification">
       <ion-icon name="notifications"></ion-icon>
-      <ion-label>Search</ion-label>
+      <ion-label>通知</ion-label>
+      <ion-badge *ngIf="notificationService.haveNotReadCount>0">{{notificationService.haveNotReadCount}}</ion-badge>
     </ion-tab-button>
   </ion-tab-bar>
 </ion-tabs>
