--- a/src/app/shared/components/header/header.component.scss
+++ b/src/app/shared/components/header/header.component.scss
@@ -1,6 +1,4 @@
-.headerAvatar {
-    overflow: hidden;
-    &S3 {
-        --width: 100%;
-    }
+ion-searchbar {
+    margin-top: 5px;
+    padding-bottom: 5px;
 }
