--- a/src/app/notification/notification-item/notification-item.component.html
+++ b/src/app/notification/notification-item/notification-item.component.html
@@ -7,8 +7,8 @@
         </amplify-s3-image>
       </ion-avatar>
       <div>
-        <span [routerLink]="['/profile',notification.fromUserId]">{{getUserName()}}さん</span>
-        が{{getActionName()}}しました
+        <span [routerLink]="['/profile',notification.fromUserId]">{{getUserName()}}さま</span>
+        が{{getActionName()}}なさいました
       </div>
     </div>
     <div>
