--- a/src/app/notification/notification.page.html
+++ b/src/app/notification/notification.page.html
@@ -1,4 +1,4 @@
-<app-header iconType="menu" title="通知"></app-header>
+<app-header iconType="menu" title="おしらせ"></app-header>
 
 <ion-content>
   <app-oshaberi-button></app-oshaberi-button>
