--- a/src/app/edit-profile/edit-profile.page.html
+++ b/src/app/edit-profile/edit-profile.page.html
@@ -1,4 +1,4 @@
-<app-header iconType="back" title="プロフィール編集" buttonText="保存" (buttonClicked)="updateProfile()"></app-header>
+<app-header iconType="back" title="ご挨拶編集" buttonText="保存" (buttonClicked)="updateProfile()"></app-header>
 
 <ion-content>
   <ion-progress-bar *ngIf="uploadProgressRate>0" [value]="uploadProgressRate"></ion-progress-bar>
@@ -28,11 +28,11 @@
     <!-- nickname and profile text -->
     <ion-list>
       <ion-item>
-        <ion-label position="floating">ニックネーム</ion-label>
+        <ion-label position="floating">おなまえ</ion-label>
         <ion-input [formControl]="profileForms.get('nickname')" type="text"></ion-input>
       </ion-item>
       <ion-item>
-        <ion-label position="floating">プロフィール</ion-label>
+        <ion-label position="floating">ご挨拶文</ion-label>
         <ion-textarea [formControl]="profileForms.get('profile')" rows=6></ion-textarea>
       </ion-item>
     </ion-list>
