--- a/src/app/shared/components/header/header.component.html
+++ b/src/app/shared/components/header/header.component.html
@@ -9,7 +9,7 @@
       </ion-button>
     </ion-buttons>
     <ion-title *ngIf="title">{{ title }}</ion-title>
-    <ion-searchbar *ngIf="iconType=='search'" showCancelButton="always" placeholder="キーワード" animated
+    <ion-searchbar *ngIf="iconType=='search'" showCancelButton="always" placeholder="ことば" animated
       (ionChange)="search($event)"></ion-searchbar>
     <ion-buttons slot="end">
       <ion-button *ngIf="buttonText" [disabled]="buttonDisabled" slot="end" (click)="sendButtonClickEvent()">{{
