--- a/src/app/shared/components/oshaberi-button/oshaberi-button.component.html
+++ b/src/app/shared/components/oshaberi-button/oshaberi-button.component.html
@@ -1,4 +1,4 @@
-<ion-fab vertical="bottom" horizontal="end" slot="fixed">
+<ion-fab horizontal="end">
   <ion-fab-button (click)="goToCreateOshaberiPage()">
     <ion-icon name="pencil-outline"></ion-icon>
   </ion-fab-button>
